# pycounts

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: conf.py  example.ipynb
src/pycounts/: datasets.py  plotting.py  pycounts.py
src/pycounts/data/: flatland.txt
tests/: test_pycounts.py
