[tool.poetry]
name = "pycounts"
version = "0.3.0"
description = "Calculate word counts in a text file!"
authors = ["Ryan Du"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = ">=3.10.3"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
jupyter = "^1.1.1"
myst-nb = "^1.2.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"
python-semantic-release = {version = "^9.21.1", python = "^3.12"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                       # version location
branch = "main"                                         # branch to make release of
changelog_file = "CHANGELOG.md"                         # changelog file
build_command = "pip install poetry && poetry build"    # build dists